# CapsLoggerV2

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  resources.qrc
.github/workflows/: build.yml
resources/: CapsLoggerV2.desktop  appicon.rc
sources/: main.cpp
sources/gui/: KeysLoggerTray.cpp  KeysLoggerTray.h  SettingsDefines.cpp  SettingsDefines.h  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui  TrayMessagePopup.cpp  TrayMessagePopup.h
sources/platform/: KeysLoggerProvider.cpp  KeysLoggerProvider.h  WaylandKeysLogger.cpp  WaylandKeysLogger.h  WinKeysLogger.cpp  WinKeysLogger.h  X11KeysLogger.cpp  X11KeysLogger.h
translations/: CapsLoggerV2_en.ts  CapsLoggerV2_ru.ts
